# 22s-pa01-kate

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
data/: 10-paintings.txt  100-paintings.txt  20-paintings.txt  4-paintings.txt  50-paintings.txt
src/: BruteForce.cpp  BruteForce.h  MyOptimization.cpp  MyOptimization.h  Paintings.cpp  Paintings.h  Parsing.cpp  Parsing.h  PriciestFirst.cpp  PriciestFirst.h  main.cpp
